chore: Update MASTER_TODO and generate audit reports